# AdvisorBot

./: AdvisorBot.cpp  AdvisorBot.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  README.md  Wallet.cpp  Wallet.h  global.h  main.cpp  rapidcsv.h
